# pre-commit-no-emoji

./: .pre-commit-hooks.yaml  README.md  hatch.toml  pyproject.toml  remove_emoji.py
src/pre_commit_no_emoji/: __main__.py  remove_emoji.py
