[project]
name = 'pre-commit-no-emoji'
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]
description='Pre-commit hooks for deal with Emoji'
dependencies = []


[[project.authors]]
name = 'Maksym Vlasov'

[project.readme]
file = 'README.md'
content-type = 'text/markdown'
